styles/main.css
/* css start here */

* {box-sizing: border-box;}

body {
      font-family: "Montserrat", "Open Sans", Helvetica, Arial, sans-serif;
      display: flex;
      justify-content: center;
      align-items: center;
      min-height: 100vh;
      background-color: lavender;
      border: solid purple;
}

main {
    min-height: 100px;
    min-width: 1rem;
    background: lightblue;
    padding: 1rem 2rem;
    border-radius: 5rem; 
}

h1 {
  color: black;
  text-align: center;
}

p {
  font-family: "Montserrat", "Open Sans", Helvetica, Arial, sans-serif;
  font-weight: lighter;
  color: #2d2d2d;
}

/* TODO: size images manually so this is not necessary */
img {
  max-height: 20rem; 
/*  border-style: double; for some reason not able to add borders*/
}

/***************** NAV *****************/

nav1 a:hover {
  text-decoration: underline;
}

navbar-brand {
  text-align: center;
}

products a:hover {
  text-decoration: underline;
}


/**************** HERO *****************/

header img {
  max-height: 6rem;
  text-align: center;
}

h1 .logo-w {
  font-size: 3.5rem;
  text-align: center;
}

/**************** ASIDE ****************/

input[type="submit"] {
  padding: .25rem;
  background-color: #3D7FCF;
  border: 1px solid #3D7FCF;
  border-radius: 5px;
  font-size: .75rem;
  color: white;
}

/*********** PRODUCTS SECTION ***********/

section {
  padding: 0 .75rem;
}

h2 {
  padding-top: 1.5rem;
  font-size: 2rem;
  text-align: center;
  color: #2d2d2d;
}

h3 {
  font-size: 1.2rem;
  text-align: center;
  color: #2d2d2d;
}

